Aggiornamento icone SVG: uniformato colore verde e sostituito icone homepage/chi-siamo

--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -275,7 +275,15 @@
             <div class="services-grid">
                 <div class="service-card nebbiogeni-card">
                     <div class="service-icon">
-                        <img src="icons/nebbiogeni.webp" alt="Icona Nebbiogeni" width="55" height="55">
+                        <svg width="80" height="80" viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" stroke="#4caf50" fill="#4caf50" role="img" aria-label="Icona Sistemi Nebbiogeni">
+                            <g fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <rect x="6" y="32" width="18" height="16" rx="2" />
+                                <rect x="24" y="36" width="5" height="8" rx="1" />
+                                <path d="M 29 38 L 39 34 M 29 42 L 39 46" />
+                                <path d="M 40 34 C 45 26, 55 26, 58 32 C 63 22, 77 28, 74 40 C 79 52, 65 62, 55 56 C 45 64, 37 56, 40 46" />
+                            </g>
+                            <circle cx="11" cy="36" r="1" stroke="none" />
+                        </svg>
                     </div>
                     <h3 data-translate="chi-siamo-spec1-title">Sistemi Nebbiogeni</h3>
                     <p data-translate="chi-siamo-spec1-desc">Tecnologia all'avanguardia per la protezione immediata contro intrusioni. I nostri sistemi nebbiogeni creano una barriera di nebbia densa in pochi secondi, rendendo impossibile ai malintenzionati orientarsi e proseguire nell'azione criminosa.</p>
@@ -283,7 +291,22 @@
                 </div>
                 <div class="service-card serramenti-card">
                     <div class="service-icon">
-                        <img src="icons/serramenti.webp" alt="Icona Serramenti" width="55" height="55">
+                        <svg width="80" height="80" viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" stroke="#4caf50" fill="#4caf50" aria-label="Icona Serramenti Blindati di Sicurezza">
+                            <!-- Stile principale per le linee dell'icona -->
+                            <g fill="none" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <!-- 1. Cornice esterna della porta -->
+                                <rect x="20" y="12" width="40" height="56" rx="2" />
+                                <!-- 2. Pannello interno della porta -->
+                                <rect x="23" y="15" width="34" height="50" rx="2" />
+                                <!-- 3. Toppa della chiave -->
+                                <path d="M 48 38 a 2 2 0 1 1 0 4 a 2 2 0 1 1 0 -4 v 5 Z" />
+                                <!-- 4. Maniglia -->
+                                <circle cx="30" cy="40" r="2" />
+                                <line x1="30" y1="40" x2="26" y2="40" />
+                                <!-- 5. Meccanismo di blocco laterale -->
+                                <rect x="25" y="30" width="4" height="6" rx="1" />
+                            </g>
+                        </svg>
                     </div>
                     <h3 data-translate="chi-siamo-spec2-title">Serramenti Blindati</h3>
                     <p data-translate="chi-siamo-spec2-desc">Porte blindate, finestre di sicurezza e serramenti antieffrazione di ultima generazione. Progettiamo e installiamo soluzioni su misura che combinano massima sicurezza ed estetica raffinata per ogni tipo di ambiente.</p>
@@ -291,7 +314,28 @@
                 </div>
                 <div class="service-card sorveglianza-card">
                     <div class="service-icon">
-                        <img src="icons/sorveglianza.webp" alt="Icona Videosorveglianza" width="55" height="55">
+                        <svg viewBox="0 0 80 80" fill="none" xmlns="http://www.w3.org/2000/svg" width="80" height="80" aria-label="Icona Sistemi di Videosorveglianza Avanzati">
+                            <!-- Bordo circolare esterno -->
+                            <circle cx="40" cy="40" r="37.6" stroke="#4caf50" stroke-width="2" fill="none"/>
+                            <!-- Corpo telecamera -->
+                            <rect x="24.8" y="35.2" width="30.4" height="17.6" rx="3.2" stroke="#4caf50" stroke-width="2" fill="none"/>
+                            <!-- Obiettivo principale -->
+                            <circle cx="44.8" cy="44" r="5.6" stroke="#4caf50" stroke-width="2" fill="none"/>
+                            <circle cx="44.8" cy="44" r="3.2" stroke="#4caf50" stroke-width="1.5" fill="none"/>
+                            <circle cx="44.8" cy="44" r="0.8" fill="#4caf50"/>
+                            <!-- Supporto di montaggio -->
+                            <rect x="35.2" y="52.8" width="9.6" height="8" rx="1.6" stroke="#4caf50" stroke-width="2" fill="none"/>
+                            <!-- Base di supporto -->
+                            <rect x="30.4" y="60.8" width="20" height="4" rx="1.6" stroke="#4caf50" stroke-width="2" fill="none"/>
+                            <!-- LED di stato -->
+                            <circle cx="32" cy="37.6" r="0.8" fill="#4caf50"/>
+                            <!-- Griglia ventilazione -->
+                            <rect x="27.2" y="40" width="12" height="0.8" stroke="#4caf50" stroke-width="0.5" fill="none"/>
+                            <rect x="27.2" y="41.6" width="12" height="0.8" stroke="#4caf50" stroke-width="0.5" fill="none"/>
+                            <rect x="27.2" y="43.2" width="12" height="0.8" stroke="#4caf50" stroke-width="0.5" fill="none"/>
+                            <!-- Antenna o sensore -->
+                            <rect x="27.2" y="32" width="1.6" height="3.2" rx="0.8" stroke="#4caf50" stroke-width="1" fill="none"/>
+                        </svg>
                     </div>
                     <h3 data-translate="chi-siamo-spec3-title">Videosorveglianza</h3>
                     <p data-translate="chi-siamo-spec3-desc">Sistemi di videosorveglianza intelligenti con tecnologie AI integrate. Telecamere 4K, visione notturna, riconoscimento facciale e analisi comportamentale per un controllo completo e automatizzato della tua proprietà.</p>
@@ -299,7 +343,23 @@
                 </div>
                 <div class="service-card allarmi-card">
                     <div class="service-icon">
-                        <img src="icons/allarmi.webp" alt="Icona Allarmi" width="55" height="55">
+                        <svg width="80" height="80" viewBox="0 0 80 80" xmlns="http://www.w3.org/2000/svg" stroke="#4caf50" fill="none" aria-label="Icona Sistemi di Allarme Intelligenti">
+                            <!-- Stile principale per le linee dell'icona -->
+                            <g stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <!-- 1. Base della campanella -->
+                                <path d="M 24 60 h 32 v -4 a 2.4 2.4 0 0 0 -2.4 -2.4 h -27.2 a 2.4 2.4 0 0 0 -2.4 2.4 Z" />
+                                <!-- 2. Cupola della campanella -->
+                                <path d="M 28 53.6 A 12 12 0 0 1 52 53.6" />
+                                <!-- 3. Rintocco superiore -->
+                                <path d="M 37.6 22.4 h 4.8 a 1.6 1.6 0 0 1 1.6 1.6 v 4 a 1.6 1.6 0 0 1 -1.6 1.6 h -4.8 a 1.6 1.6 0 0 1 -1.6 -1.6 v -4 a 1.6 1.6 0 0 1 1.6 -1.6 Z" />
+                                <!-- 4. Onde sonore (lato destro) -->
+                                <path d="M 48 28 A 16 16 0 0 1 57.6 40" />
+                                <path d="M 52 22.4 A 22.4 22.4 0 0 1 65.6 40" />
+                                <!-- 5. Onde sonore (lato sinistro) -->
+                                <path d="M 32 28 A 16 16 0 0 0 22.4 40" />
+                                <path d="M 28 22.4 A 22.4 22.4 0 0 0 14.4 40" />
+                            </g>
+                        </svg>
                     </div>
                     <h3 data-translate="chi-siamo-spec4-title">Sistemi di Allarme</h3>
                     <p data-translate="chi-siamo-spec4-desc">Allarmi wireless e filari di ultima generazione con sensori intelligenti, bottoni antipanico e controllo remoto. Sistemi modulari e scalabili che si adattano perfettamente alle tue esigenze specifiche di sicurezza.</p>
