--- a/index.html
+++ b/index.html
@@ -479,10 +479,15 @@ img {
                 <div class="services-grid">
                     <a href="nebbiogeni.html" class="service-card nebbiogeni-card">
                         <div class="service-icon">
-                            <picture>
-                                <source srcset="icons/nebbiogeni.webp" type="image/webp">
-                            <img src="icons/nebbiogeni.webp" alt="Icona Sistemi Nebbiogeni Antifurto Professionali" width="80" height="80" loading="lazy" style="object-fit: contain; aspect-ratio: 1/1;">
-                            </picture>
+                            <svg width="80" height="80" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" stroke="#4caf50" fill="#4caf50" role="img" aria-label="Icona Sistemi Nebbiogeni">
+                                <g fill="none" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                                    <rect x="8" y="40" width="22" height="20" rx="3" />
+                                    <rect x="30" y="45" width="6" height="10" rx="1.5" />
+                                    <path d="M 36 47 L 49 42 M 36 53 L 49 58" />
+                                    <path d="M 50 42 C 56 32, 69 32, 73 40 C 79 28, 96 35, 93 50 C 99 65, 81 78, 69 70 C 56 80, 46 70, 50 58" />
+                                </g>
+                                <circle cx="14" cy="45" r="1.5" stroke="none" />
+                            </svg>
                         </div>
                         <h3 data-translate="service-nebbiogeni-title">Nebbiogeni</h3>
                         <p data-translate="service-nebbiogeni-desc">Sistemi di nebbiogeni per protezione immediata contro intrusioni e furti</p>
@@ -490,10 +495,22 @@ img {
                     </a>
                     <a href="serramenti.html" class="service-card serramenti-card">
                         <div class="service-icon">
-                            <picture>
-                                <source srcset="icons/serramenti.webp" type="image/webp">
-                            <img src="icons/serramenti.webp" alt="Icona Serramenti Blindati di Sicurezza" width="80" height="80" loading="lazy" style="object-fit: contain; aspect-ratio: 1/1;">
-                            </picture>
+                            <svg width="100" height="100" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" stroke="#4caf50" fill="#4caf50" aria-label="Icona Serramenti Blindati di Sicurezza">
+                                <!-- Stile principale per le linee dell'icona -->
+                                <g fill="none" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                                    <!-- 1. Cornice esterna della porta -->
+                                    <rect x="25" y="15" width="50" height="70" rx="3" />
+                                    <!-- 2. Pannello interno della porta -->
+                                    <rect x="29" y="19" width="42" height="62" rx="2" />
+                                    <!-- 3. Toppa della chiave -->
+                                    <path d="M 60 47 a 2.5 2.5 0 1 1 0 5 a 2.5 2.5 0 1 1 0 -5 v 6 Z" />
+                                    <!-- 4. Maniglia -->
+                                    <circle cx="38" cy="50" r="3" />
+                                    <line x1="38" y1="50" x2="33" y2="50" />
+                                    <!-- 5. Meccanismo di blocco laterale -->
+                                    <rect x="31" y="38" width="5" height="8" rx="1" />
+                                </g>
+                            </svg>
                         </div>
                         <h3 data-translate="service-serramenti-title">Serramenti di Sicurezza</h3>
                         <p data-translate="service-serramenti-desc">Porte blindate, finestre antieffrazione e serramenti ad alta sicurezza</p>
@@ -501,10 +518,28 @@ img {
                     </a>
                     <a href="sorveglianza.html" class="service-card sorveglianza-card">
                         <div class="service-icon">
-                            <picture>
-                                <source srcset="icons/sorveglianza.webp" type="image/webp">
-                            <img src="icons/sorveglianza.webp" alt="Icona Sistemi di Videosorveglianza Avanzati" width="80" height="80" loading="lazy" style="object-fit: contain; aspect-ratio: 1/1;">
-                            </picture>
+                            <svg viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg" width="100" height="100" aria-label="Icona Sistemi di Videosorveglianza Avanzati">
+                                <!-- Bordo circolare esterno -->
+                                <circle cx="50" cy="50" r="47" stroke="#4caf50" stroke-width="2" fill="none"/>
+                                <!-- Corpo telecamera -->
+                                <rect x="31" y="44" width="38" height="22" rx="4" stroke="#4caf50" stroke-width="2" fill="none"/>
+                                <!-- Obiettivo principale -->
+                                <circle cx="56" cy="55" r="7" stroke="#4caf50" stroke-width="2" fill="none"/>
+                                <circle cx="56" cy="55" r="4" stroke="#4caf50" stroke-width="1.5" fill="none"/>
+                                <circle cx="56" cy="55" r="1" fill="#4caf50"/>
+                                <!-- Supporto di montaggio -->
+                                <rect x="44" y="66" width="12" height="10" rx="2" stroke="#4caf50" stroke-width="2" fill="none"/>
+                                <!-- Base di supporto -->
+                                <rect x="38" y="76" width="25" height="5" rx="2" stroke="#4caf50" stroke-width="2" fill="none"/>
+                                <!-- LED di stato -->
+                                <circle cx="40" cy="47" r="1" fill="#4caf50"/>
+                                <!-- Griglia ventilazione -->
+                                <rect x="34" y="50" width="15" height="1" stroke="#4caf50" stroke-width="0.5" fill="none"/>
+                                <rect x="34" y="52" width="15" height="1" stroke="#4caf50" stroke-width="0.5" fill="none"/>
+                                <rect x="34" y="54" width="15" height="1" stroke="#4caf50" stroke-width="0.5" fill="none"/>
+                                <!-- Antenna o sensore -->
+                                <rect x="34" y="40" width="2" height="4" rx="1" stroke="#4caf50" stroke-width="1" fill="none"/>
+                            </svg>
                         </div>
                         <h3 data-translate="service-sorveglianza-title">Sorveglianza</h3>
                         <p data-translate="service-sorveglianza-desc">Centrale operativa certificata, pronto intervento con GPG armate 24/7, Custodia chiavi e collegamento con centrale operativa, e integrazione completa con AI</p>
@@ -512,10 +547,23 @@ img {
                     </a>
                     <a href="allarmi.html" class="service-card allarmi-card">
                         <div class="service-icon">
-                            <picture>
-                                <source srcset="icons/allarmi.webp" type="image/webp">
-                            <img src="icons/allarmi.webp" alt="Icona Sistemi di Allarme Intelligenti" width="80" height="80" loading="lazy" style="object-fit: contain; aspect-ratio: 1/1;">
-                            </picture>
+                            <svg width="100" height="100" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" stroke="#4caf50" fill="none" aria-label="Icona Sistemi di Allarme Intelligenti">
+                                <!-- Stile principale per le linee dell'icona -->
+                                <g stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                                    <!-- 1. Base della campanella -->
+                                    <path d="M 30 75 h 40 v -5 a 3 3 0 0 0 -3 -3 h -34 a 3 3 0 0 0 -3 3 Z" />
+                                    <!-- 2. Cupola della campanella -->
+                                    <path d="M 35 67 A 15 15 0 0 1 65 67" />
+                                    <!-- 3. Rintocco superiore -->
+                                    <path d="M 47 28 h 6 a 2 2 0 0 1 2 2 v 5 a 2 2 0 0 1 -2 2 h -6 a 2 2 0 0 1 -2 -2 v -5 a 2 2 0 0 1 2 -2 Z" />
+                                    <!-- 4. Onde sonore (lato destro) -->
+                                    <path d="M 60 35 A 20 20 0 0 1 72 50" />
+                                    <path d="M 65 28 A 28 28 0 0 1 82 50" />
+                                    <!-- 5. Onde sonore (lato sinistro) -->
+                                    <path d="M 40 35 A 20 20 0 0 0 28 50" />
+                                    <path d="M 35 28 A 28 28 0 0 0 18 50" />
+                                </g>
+                            </svg>
                         </div>
                         <h3 data-translate="service-allarmi-title">Sistemi di Allarme</h3>
                         <p data-translate="service-allarmi-desc">Centrali antifurto, sensori perimetrali e sistemi di allarme wireless</p>
