--- a/nebbiogeni.html
+++ b/nebbiogeni.html
@@ -461,8 +461,8 @@
                             </div>
                         </div>
                         <div class="slider-controls">
-                            <button class="slider-btn prev-btn" aria-label="Immagine precedente" data-translate="btn-prev">‹</button>
-                            <button class="slider-btn next-btn" aria-label="Immagine successiva" data-translate="btn-next">›</button>
+                            <button class="slider-btn prev-btn" aria-label="Immagine precedente">‹</button>
+                            <button class="slider-btn next-btn" aria-label="Immagine successiva">›</button>
                         </div>
                         <div class="slider-dots">
                             <button class="dot active" data-slide="0" aria-label="Vai alla slide 1"></button>
