Add Web Novis credit to footer and structured data - Added footer-created-by translation in all HTML pages - Updated script.js and script.min.js with Italian/English translations - Added creator field in structured-data.json for Google indexing

--- a/nebbiogeni.html
+++ b/nebbiogeni.html
@@ -642,6 +642,7 @@
             
             <div class="footer-bottom">
                 <p data-translate="footer-copyright">&copy; 2024 FB Total Security. Tutti i diritti riservati. | P.IVA: 12345678901</p>
+                <p data-translate="footer-created-by">Creato da Web Novis</p>
             </div>
         </div>
     </footer>
