--- a/termini-condizioni.html
+++ b/termini-condizioni.html
@@ -190,6 +190,7 @@
             </div>
             <div class="footer-bottom">
                 <p data-translate="footer-copyright">&copy; 2024 FB Total Security. Tutti i diritti riservati.</p>
+                <p data-translate="footer-created-by">Creato da Web Novis</p>
             </div>
         </div>
     </footer>
