Implementazione completa Facebook Pixel con ID 901001165949446
- Aggiunto Facebook Pixel ufficiale Meta in tutti i file HTML
- Configurato tracking PageView e eventi personalizzati
- Aggiunto file JavaScript separato per gestione pixel
- Implementato fallback noscript per utenti senza JS
- Aggiunta documentazione setup in facebook-pixel-setup.md
- Aggiunta icona Facebook per integrazione social

File modificati:
- index.html, allarmi.html, nebbiogeni.html, serramenti.html, sorveglianza.html, chi-siamo.html
- js/facebook-pixel.js (nuovo)
- icons/facebook-icon.svg (nuovo)
- facebook-pixel-setup.md (nuovo)
- structured-data.json (aggiornato)
- .htaccess (configurazioni sicurezza)

--- a/index.html
+++ b/index.html
@@ -70,6 +70,25 @@
     </script>
     -->
     
+    <!-- Facebook Pixel Code -->
+    <script>
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window, document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '901001165949446');
+      fbq('track', 'PageView');
+    </script>
+    <noscript>
+      <img height="1" width="1" style="display:none" 
+           src="https://www.facebook.com/tr?id=901001165949446&ev=PageView&noscript=1"/>
+    </noscript>
+    <!-- End Facebook Pixel Code -->
+    
     <!-- Placeholder for analytics - can be re-enabled when needed -->
     <script>
       // Stub gtag function to prevent errors in other scripts
@@ -345,7 +364,7 @@
         ]
       },
       "sameAs": [
-        "https://www.facebook.com/francosicurezza",
+        "https://www.facebook.com/profile.php?id=61581141350058",
         "https://www.instagram.com/francosicurezza",
         "https://x.com/FBTotalSecurity"
       ]
@@ -1065,8 +1084,13 @@ img {
                     <p data-translate="footer-description">Creatori di sicurezza specializzati in sistemi di protezione avanzati. La tua sicurezza è la nostra priorità.</p>
                     <div class="social-links">
                         <h4 data-translate="footer-social-title">Seguici su:</h4>
-                        <a href="https://www.facebook.com/francosicurezza" rel="follow" target="_blank" aria-label="Facebook">📘</a>
-                <a href="https://www.instagram.com/francosicurezza" rel="follow" target="_blank" aria-label="Instagram">📷</a>
+                        <a href="https://www.facebook.com/profile.php?id=61581141350058" rel="follow" target="_blank" aria-label="FB Total Security su Facebook">
+                            <svg width="20" height="20" role="img" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+                                <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                            </svg>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                        <a href="https://www.instagram.com/francosicurezza" rel="follow" target="_blank" aria-label="Instagram">📷</a>
                         <a href="https://x.com/FBTotalSecurity" aria-label="FB Total Security su X" rel="me noopener" target="_blank">
                             <svg aria-hidden="true" width="20" height="20" role="img" viewBox="0 0 24 24" fill="currentColor">
                                 <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
