--- a/nebbiogeni.html
+++ b/nebbiogeni.html
@@ -39,6 +39,30 @@
     <link rel="alternate" hreflang="en" href="https://www.fbtotalsecurity.com/nebbiogeni.html?lang=en">
     <link rel="alternate" hreflang="x-default" href="https://www.fbtotalsecurity.com/nebbiogeni.html">
     
+    <!-- Facebook Pixel Code -->
+    <script>
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window, document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '901001165949446');
+      fbq('track', 'PageView');
+      // Track interesse per servizio nebbiogeni
+      fbq('track', 'ViewContent', {
+        content_name: 'Sistemi Nebbiogeni',
+        content_category: 'security_services'
+      });
+    </script>
+    <noscript>
+      <img height="1" width="1" style="display:none" 
+           src="https://www.facebook.com/tr?id=901001165949446&ev=PageView&noscript=1"/>
+    </noscript>
+    <!-- End Facebook Pixel Code -->
+    
     <!-- Google tag (gtag.js) -->
     <!-- Google Analytics temporarily disabled to prevent net::ERR_ABORTED errors -->
     <!-- 
@@ -598,7 +622,12 @@
                     <p data-translate="footer-description">Specialista in sistemi di sicurezza con oltre 20 anni di esperienza. Soluzioni professionali per la protezione di abitazioni e attività commerciali.</p>
                     <div class="social-links">
                         <h4 data-translate="footer-social-title">Seguici su:</h4>
-                        <a href="https://www.facebook.com/francosicurezza" rel="follow" target="_blank" aria-label="Facebook">📘</a>
+                        <a href="https://www.facebook.com/profile.php?id=61581141350058" rel="follow" target="_blank" aria-label="FB Total Security su Facebook">
+                            <svg width="20" height="20" role="img" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+                                <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                            </svg>
+                            <span class="sr-only">Facebook</span>
+                        </a>
                 <a href="https://www.instagram.com/francosicurezza" rel="follow" target="_blank" aria-label="Instagram">📷</a>
                         <a href="https://x.com/FBTotalSecurity" aria-label="FB Total Security su X" rel="me noopener" target="_blank">
                             <svg aria-hidden="true" width="20" height="20" role="img" viewBox="0 0 24 24" fill="currentColor">
