--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@ img {
     <main>
         <section class="hero">
             <div class="hero-container">
-                <h1 class="hero-title" data-translate="hero-title">Sicurezza Professionale a 360°</h1>
+                <h1 class="hero-title" data-translate="hero-title">Soluzioni di Sicurezza Avanzate per la Tua Protezione</h1>
                 <p class="hero-subtitle" data-translate="hero-subtitle">Anni di esperienza multisettoriale nella protezione di abitazioni private e aziende in tutta Italia. Sistemi certificati, installazioni garantite, soluzioni personalizzate per privati e imprese.</p>
                 <div class="hero-cta">
                     <a href="#contatti" class="btn btn-primary" data-translate="hero-cta-primary">Richiedi Consulenza Gratuita</a>
