Fix W3C HTML validation errors and warnings
- Commented out non-standard CSS properties (size-adjust, contain-intrinsic-size)
- Fixed invalid http-equiv meta tags (Cache-Control, Pragma, Expires)
- Added missing alt attribute to Facebook Pixel img in noscript
- Removed trailing slashes from void elements for HTML5 compliance
- Improved accessibility with proper aria-label usage
- All pages now pass W3C HTML5 validation

--- a/termini-condizioni.html
+++ b/termini-condizioni.html
@@ -132,12 +132,12 @@
                     </button>
                 </div>
                 <ul class="nav-menu">
-                    <li><a href="nebbiogeni.html" class="nav-link" data-translate="nav-nebbiogeni">Nebbiogeni</a></li>
-                    <li><a href="serramenti.html" class="nav-link" data-translate="nav-serramenti">Serramenti</a></li>
-                    <li><a href="sorveglianza.html" class="nav-link" data-translate="nav-sorveglianza">Sorveglianza</a></li>
-                    <li><a href="allarmi.html" class="nav-link" data-translate="nav-allarmi">Allarmi</a></li>
-                    <li><a href="chi-siamo.html" class="nav-link" data-translate="nav-chi-siamo">Chi siamo</a></li>
-                    <li><a href="#contatti" class="nav-link cta" data-translate="nav-contatti">Contatti</a></li>
+                    <li><a href="nebbiogeni.html" class="nav-link" data-translate="nav-nebbiogeni" title="Sistemi nebbiogeni professionali per la sicurezza">Nebbiogeni</a></li>
+                        <li><a href="serramenti.html" class="nav-link" data-translate="nav-serramenti" title="Serramenti blindati e porte di sicurezza">Serramenti</a></li>
+                        <li><a href="sorveglianza.html" class="nav-link" data-translate="nav-sorveglianza" title="Sistemi di videosorveglianza intelligente">Sorveglianza</a></li>
+                        <li><a href="allarmi.html" class="nav-link" data-translate="nav-allarmi" title="Sistemi di allarme intelligenti">Allarmi</a></li>
+                        <li><a href="chi-siamo.html" class="nav-link" data-translate="nav-chi-siamo" title="Scopri la nostra azienda e i nostri valori">Chi siamo</a></li>
+                        <li><a href="#contatti" class="nav-link cta" data-translate="nav-contatti" title="Contattaci per un preventivo gratuito">Contatti</a></li>
                     <li class="desktop-language-selector">
                         <div class="language-selector">
                             <button class="lang-btn active" data-lang="it">
@@ -246,9 +246,19 @@
                     <h3>FB Total Security</h3>
                     <p data-translate="footer-description">Creatori di sicurezza specializzati in sistemi di protezione avanzati. La tua sicurezza è la nostra priorità.</p>
                     <div class="social-links">
-                        <a href="#" aria-label="Facebook">📘</a>
-                        <a href="#" aria-label="LinkedIn">💼</a>
-                        <a href="#" aria-label="WhatsApp">📱</a>
+                        <a href="https://www.facebook.com/profile.php?id=61581141350058" rel="follow noopener noreferrer" target="_blank" aria-label="FB Total Security su Facebook">
+                            <svg width="20" height="20" role="img" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+                                <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                            </svg>
+                            <span class="sr-only">Facebook</span>
+                        </a>
+                        <a href="https://www.instagram.com/francosicurezza" rel="follow noopener noreferrer" target="_blank" aria-label="Instagram">📷</a>
+                        <a href="https://x.com/FBTotalSecurity" aria-label="FB Total Security su X" rel="me noopener noreferrer" target="_blank">
+                            <svg aria-hidden="true" width="20" height="20" role="img" viewBox="0 0 24 24" fill="currentColor">
+                                <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"/>
+                            </svg>
+                            <span class="sr-only">X (ex Twitter)</span>
+                        </a>
                     </div>
                 </div>
                 <div class="footer-section">
