Fix Google Analytics ERR_BLOCKED_BY_CLIENT error
- Removed stub gtag function that was disabling analytics
- Google Analytics now properly tracks page views and events
- Fixed console error: ERR_BLOCKED_BY_CLIENT for region1.google-analytics.com
- Analytics tracking restored across all pages (index, allarmi, chi-siamo, nebbiogeni, serramenti, sorveglianza)
- Maintains existing privacy settings (anonymize_ip, transport_type: beacon)

--- a/sorveglianza.html
+++ b/sorveglianza.html
@@ -76,13 +76,7 @@
         page_location: window.location.href
       });
     </script>
-    <!-- Placeholder for analytics - can be re-enabled when needed -->
-    <script>
-      // Stub gtag function to prevent errors in other scripts
-      window.gtag = window.gtag || function() {
-        console.log('Analytics disabled - gtag call:', arguments);
-      };
-    </script><!-- === OTTIMIZZAZIONE FONT E CSS PER LCP === -->
+<!-- === OTTIMIZZAZIONE FONT E CSS PER LCP === -->
     
     <!-- 1. Preload diretto dei file WOFF2 del font Inter -->
     <link rel="preload" href="https://fonts.gstatic.com/s/inter/v20/UcC73FwrK3iLTeHuS_nVMrMxCp50SjIa1ZL7.woff2" as="font" type="font/woff2" crossorigin="anonymous">
