--- a/termini-condizioni.html
+++ b/termini-condizioni.html
@@ -275,7 +275,7 @@
                     <ul>
                         <li><a href="chi-siamo.html" data-translate="footer-company-1">Chi Siamo</a></li>
                         <li><a href="#contatti" data-translate="footer-company-2">Contatti</a></li>
-                        <li><a href="termini-condizioni.html" data-translate="footer-company-3">Termini e Condizioni</a></li>
+                        <li><a href="termini-condizioni.html" data-translate="footer-company-3" title="Leggi i nostri termini e condizioni di servizio">Termini e Condizioni</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
